test/corpus/auto_generated_operators.txt
==================
(1) "abc" [auto_generated_operators]
==================
"abc"
---
(source_file
  (cell
    (string_literal)))

==================
(2) {1, 2, 3} [auto_generated_operators]
==================
{1, 2, 3}
---
(source_file
  (cell
    (list
      (integer_literal)
      (integer_literal)
      (integer_literal))))

==================
(3) (a, b, c) [auto_generated_operators]
==================
(a, b, c)
---
(source_file
  (cell
    (sequence
      (symbol)
      (symbol)
      (symbol))))

==================
(4) [x, y, z] [auto_generated_operators]
==================
[x, y, z]
---
(source_file
  (cell
    (array
      (symbol)
      (symbol)
      (symbol))))

==================
(5) f("a", {b}, (c)) [auto_generated_operators]
==================
f("a", {b}, (c))
---
(source_file
  (cell
    (binary_expression
      left: (symbol)
      operator: (space)
      right: (sequence
        (string_literal)
        (list
          (symbol))
        (sequence
          (symbol))))))

==================
(6) {a,} [auto_generated_operators]
==================
{a,}
---
(source_file
  (cell
    (list
      (symbol))))

==================
(7) () [auto_generated_operators]
==================
()
---
(source_file
  (cell
    (sequence)))

==================
(8) (,) [auto_generated_operators]
==================
(,)
---
(source_file
  (cell
    (sequence)))

==================
(9) (a,,b) [auto_generated_operators]
==================
(a,,b)
---
(source_file
  (cell
    (sequence
      (symbol)
      (symbol))))

==================
(10) (g not x) + y [auto_generated_operators]
==================
(g not x) + y
---
(source_file
  (cell
    (binary_expression
      left: (sequence
        (binary_expression
          left: (symbol)
          operator: (space)
          right: (prefix_expression
            operand: (symbol))))
      right: (symbol))))

==================
(11) x_2.e-2 [auto_generated_operators]
==================
x_2.e-2
---
(source_file
  (cell
    (binary_expression
      left: (symbol)
      right: (float_literal))))

==================
(12) R / I [x] [auto_generated_operators]
==================
R / I [x]
---
(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        right: (symbol))
      operator: (space)
      right: (array
        (symbol)))))

==================
(13) f g [x] [auto_generated_operators]
==================
f g [x]
---
(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        operator: (space)
        right: (symbol))
      operator: (space)
      right: (array
        (symbol)))))

==================
(14) f(2)^2 [auto_generated_operators]
==================
f(2)^2
---
(source_file
  (cell
    (binary_expression
      left: (symbol)
      operator: (space)
      right: (binary_expression
        left: (sequence
          (integer_literal))
        right: (integer_literal)))))

==================
(15) f / g (s) [auto_generated_operators]
==================
f / g (s)
---
(source_file
  (cell
    (binary_expression
      left: (symbol)
      right: (binary_expression
        left: (symbol)
        operator: (space)
        right: (sequence
          (symbol))))))

==================
(16) f / g [x] [auto_generated_operators]
==================
f / g [x]
---
(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        right: (symbol))
      operator: (space)
      right: (array
        (symbol)))))

==================
(17) f / g # (x) [auto_generated_operators]
==================
f / g # (x)
---
(source_file
  (cell
    (binary_expression
      left: (symbol)
      right: (binary_expression
        left: (symbol)
        right: (sequence
          (symbol))))))

==================
(18) f / g # [x] [auto_generated_operators]
==================
f / g # [x]
---
(source_file
  (cell
    (binary_expression
      left: (symbol)
      right: (binary_expression
        left: (symbol)
        right: (array
          (symbol))))))

==================
(19) a + b [x] [auto_generated_operators]
==================
a + b [x]
---
(source_file
  (cell
    (binary_expression
      left: (symbol)
      right: (binary_expression
        left: (symbol)
        operator: (space)
        right: (array
          (symbol))))))

==================
(20) a * b [x] [auto_generated_operators]
==================
a * b [x]
---
(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        right: (symbol))
      operator: (space)
      right: (array
        (symbol)))))

==================
(21) f / g <| 1 |> [auto_generated_operators]
==================
f / g <| 1 |>
---
(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        right: (symbol))
      operator: (space)
      right: (angle_bar_list
        (integer_literal)))))

==================
(22) f/g#(x) [auto_generated_operators]
==================
f/g#(x)
---
(source_file
  (cell
    (binary_expression
      left: (symbol)
      right: (binary_expression
        left: (symbol)
        right: (sequence
          (symbol))))))

==================
(23) f/g#[x] [auto_generated_operators]
==================
f/g#[x]
---
(source_file
  (cell
    (binary_expression
      left: (symbol)
      right: (binary_expression
        left: (symbol)
        right: (array
          (symbol))))))

==================
(24) a + b * c - d / e [auto_generated_operators]
==================
a + b * c - d / e
---
(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        right: (binary_expression
          left: (symbol)
          right: (symbol)))
      right: (binary_expression
        left: (symbol)
        right: (symbol)))))

==================
(25) x_3 + y^2 - z_1.e-5 [auto_generated_operators]
==================
x_3 + y^2 - z_1.e-5
---
(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (binary_expression
          left: (symbol)
          right: (integer_literal))
        right: (binary_expression
          left: (symbol)
          right: (integer_literal)))
      right: (binary_expression
        left: (symbol)
        right: (float_literal)))))

==================
(26) a + b * c ^ d [auto_generated_operators]
==================
a + b * c ^ d
---
(source_file
  (cell
    (binary_expression
      left: (symbol)
      right: (binary_expression
        left: (symbol)
        right: (binary_expression
          left: (symbol)
          right: (symbol))))))

==================
(27) x - y / z ++ w [auto_generated_operators]
==================
x - y / z ++ w
---
(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        right: (binary_expression
          left: (symbol)
          right: (symbol)))
      right: (symbol))))

==================
(28) a - b * c ^ d [auto_generated_operators]
==================
a - b * c ^ d
---
(source_file
  (cell
    (binary_expression
      left: (symbol)
      right: (binary_expression
        left: (symbol)
        right: (binary_expression
          left: (symbol)
          right: (symbol))))))

==================
(29) x - y / z ++ w [auto_generated_operators]
==================
x - y / z ++ w
---
(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        right: (binary_expression
          left: (symbol)
          right: (symbol)))
      right: (symbol))))

==================
(30) a - b * c ^ d [auto_generated_operators]
==================
a - b * c ^ d
---
(source_file
  (cell
    (binary_expression
      left: (symbol)
      right: (binary_expression
        left: (symbol)
        right: (binary_expression
          left: (symbol)
          right: (symbol))))))

==================
(31) a..b..2 [auto_generated_operators]
==================
a..b..2
---
(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        right: (symbol))
      right: (integer_literal))))

==================
(32) a..<b..2 [auto_generated_operators]
==================
a..<b..2
---
(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        right: (symbol))
      right: (integer_literal))))

==================
(33) a..=b..2 [auto_generated_operators]
==================
a..=b..2
---
(source_file
  (cell
    (assignment_expression
      left: (symbol)
      right: (binary_expression
        left: (symbol)
        right: (integer_literal)))))

==================
(34) a..<b..2 [auto_generated_operators]
==================
a..<b..2
---
(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        right: (symbol))
      right: (integer_literal))))

==================
(35) x += 3 + 3 [auto_generated_operators]
==================
x += 3 + 3
---
(source_file
  (cell
    (assignment_expression
      left: (symbol)
      right: (binary_expression
        left: (integer_literal)
        right: (integer_literal)))))

==================
(36) x := y [auto_generated_operators]
==================
x := y
---
(source_file
  (cell
    (assignment_expression
      left: (symbol)
      right: (symbol))))

==================
(37) sin (2 * x + 3) [auto_generated_operators]
==================
sin (2 * x + 3)
---
(source_file
  (cell
    (binary_expression
      left: (symbol)
      operator: (space)
      right: (sequence
        (binary_expression
          left: (binary_expression
            left: (integer_literal)
            right: (symbol))
          right: (integer_literal))))))

==================
(38) sin(x+y)^6 [auto_generated_operators]
==================
sin(x+y)^6
---
(source_file
  (cell
    (binary_expression
      left: (symbol)
      operator: (space)
      right: (binary_expression
        left: (sequence
          (binary_expression
            left: (symbol)
            right: (symbol)))
        right: (integer_literal)))))

==================
(39) I/R[x, y, z] [auto_generated_operators]
==================
I/R[x, y, z]
---
(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        right: (symbol))
      operator: (space)
      right: (array
        (symbol)
        (symbol)
        (symbol)))))

==================
(40) sin(2)! + sin sin 2 [auto_generated_operators]
==================
sin(2)! + sin sin 2
---
(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        operator: (space)
        right: (postfix_expression
          operand: (sequence
            (integer_literal))))
      right: (binary_expression
        left: (symbol)
        operator: (space)
        right: (binary_expression
          left: (symbol)
          operator: (space)
          right: (integer_literal))))))

==================
(41) x + y 2! + (z w) q 2 [auto_generated_operators]
==================
x + y 2! + (z w) q 2
---
(source_file
  (cell
    (binary_expression
      left: (binary_expression
        left: (symbol)
        right: (binary_expression
          left: (symbol)
          operator: (space)
          right: (postfix_expression
            operand: (integer_literal))))
      right: (binary_expression
        left: (sequence
          (binary_expression
            left: (symbol)
            operator: (space)
            right: (symbol)))
        operator: (space)
        right: (binary_expression
          left: (symbol)
          operator: (space)
          right: (integer_literal))))))
